--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "^1.8",
         "santigarcor/laratrust": "^8.3",
